# argument-graph-mining

./: .gitignore  Dockerfile  README.md  buf.gen.yaml  config-example.toml  docker-compose.yml  flake.nix  pyproject.toml  settings.toml
data/relation/: logreg_de.sav  logreg_en.sav
recap_am/: app.py
recap_am/adu/: classify.py  run_task.py
recap_am/evaluation/: evaluator.py
recap_am/model/: query.py  statistic.py
recap_am/preprocessing/: pipeline.ipynb
recap_am/relation/: construct_graph.py
recap_am/relation/controller/: attack_support.py  flat_tree.py
src/arg_services/cbr/v1beta/: adaptation_pb2.py  adaptation_pb2_grpc.py  casebase_pb2.py  casebase_pb2_grpc.py  model_pb2.py  retrieval_pb2.py  retrieval_pb2_grpc.py
src/arg_services/graph/v1/: graph_pb2.py
src/arg_services/mining/v1beta/: adu_pb2.py  adu_pb2_grpc.py  entailment_pb2.py  entailment_pb2_grpc.py  graph_construction_pb2.py  graph_construction_pb2_grpc.py  major_claim_pb2.py  major_claim_pb2_grpc.py  mining_pb2.py  mining_pb2_grpc.py
src/arg_services/mining_explanation/v1beta/: adu_pb2.py  adu_pb2_grpc.py  entailment_pb2.py  entailment_pb2_grpc.py  major_claim_pb2.py  major_claim_pb2_grpc.py
src/arg_services/nlp/v1/: nlp_pb2.py  nlp_pb2_grpc.py
src/arg_services/quality/v1beta/: expert_pb2.py  expert_pb2_grpc.py  explanation_pb2.py  explanation_pb2_grpc.py  qualia_pb2.py  qualia_pb2_grpc.py
src/arg_services/ranking/v1beta/: granularity_pb2.py  granularity_pb2_grpc.py  ranking_pb2.py  ranking_pb2_grpc.py
src/arggraph/: __init__.py  edge.py  graph.py  node.py  utils.py
src/argmining/: __init__.py  __main__.py  app.py
src/argmining/adu/: classify.py  feature_select.py  run_task.py  utilities.py
src/argmining/adu/training/: train_adu.py  (+1 more)
src/argmining/controller/: extract_features.py  nlp.py  preprocess.py
src/argmining/evaluation/: evaluator.py  similarity.py
src/argmining/model/: color.py  config.py  protobuf_graph.py  query.py  statistic.py
src/argmining/preprocessing/: graph_to_dataframe.ipynb  kialo.py  parser.ipynb  pipeline.ipynb  tfidf.ipynb
src/argmining/relation/: construct_graph.py
src/google/api/: annotations_pb2.py  http_pb2.py
src/recap_am/: app.py
src/recap_am/adu/: classify.py  feature_select.py  grids.py  run_task.py  utilities.py
src/recap_am/controller/: extract_features.py  nlp.py  preprocess.py
src/recap_am/evaluation/: evaluator.py  similarity.py
src/recap_am/model/: config.py  query.py  statistic.py
src/recap_am/preprocessing/: kialo.py
src/recap_am/relation/: construct_graph.py
src/recap_argument_graph/: dt.py
(+21 files in other folders)
