[project]
name = "argmining"
version = "0.1.0"
description = ""
authors = [{ name = "Mirko Lenz", email = "info@mirko-lenz.de" }]
requires-python = "==3.8.*"
dependencies = [
    # argmining
    "dynaconf>=3.1,<3.2",
    "edlib>=1.3,<1.4",
    "flask>=1.1,<1.2",
    "markupsafe>=1,<2",
    "matplotlib>=3.2,<3.3",
    "nltk>=3.5,<3.6",
    "numpy>=1.18,<1.19",
    "packaging>=20.3,<20.4",
    "pandas>=0.25,<0.26",
    "scikit-learn>=0.22,<0.23",
    "scipy>=1.4,<1.5",
    "sentence-transformers>=0.2,<0.3",
    "setuptools>=50,<60",
    "spacy>=2.2,<2.3",
    "tomlkit>=0.5,<0.6",
    "torch>=1.13,<1.14",
    "xgboost>=0.90,<0.91",
    # spacy
    "en-core-web-lg==2.2.0",
    "de-core-news-md==2.2.0",
    # arg-services
    "grpcio-reflection>=1.30,<1.40",
    "grpcio>=1.30,<1.40",
    "protobuf>=3.10,<3.20",
    # arggraph
    # https://github.com/recap-utr/arguebuf-python/tree/dd05ec3776e496b6d45b69e29c72ae35a41e79cb
    "graphviz>=0.13,<0.14",
    "lxml>=4.6,<4.7",
    "networkx>=2.6,<2.7",
    "pendulum>=2.1,<2.2",
]

[project.scripts]
argmining-app = "argmining.app:run_server"
argmining-grpc = "argmining.app:run_grpc"
argmining-eval = "argmining.app:evaluate"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[[tool.uv.sources.en-core-web-lg]]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-2.2.0/en_core_web_lg-2.2.0.tar.gz"

[[tool.uv.sources.de-core-news-md]]
url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_md-2.2.0/de_core_news_md-2.2.0.tar.gz"
