[project]
name = "argmining"
version = "1.0.0"
description = ""
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
requires-python = "~=3.11"
dependencies = [
    "arg-services>=1,<2",
    "arguebuf>=2,<3",
    "dynaconf>=3,<4",
    "edlib>=1,<2",
    "matplotlib>=3,<4",
    "nltk>=3,<4",
    "numpy>=1,<2",
    "pandas>=1,<2",
    "scikit-learn>=1,<2",
    "scipy>=1,<2",
    "sentence-transformers>=2,<4",
    "spacy~=3.7",
    "tomlkit>=0,<1",
    "torch>=2.2,<2.3",
    "typer>=0,<1",
    "xgboost>=1,<2",
]

[dependency-groups]
dev = ["en-core-web-lg==3.7.1"]

[project.scripts]
argmining = "argmining.app:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[[tool.uv.sources.en-core-web-lg]]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.1/en_core_web_lg-3.7.1-py3-none-any.whl"
